// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`uiReducer handles hideFeedbackForm action 1`] = `
Object {
  "customerPopupVisible": false,
  "feedbackFormVisible": false,
  "searchVisible": false,
}
`;

exports[`uiReducer handles hideSearch action 1`] = `
Object {
  "customerPopupVisible": false,
  "feedbackFormVisible": false,
  "searchVisible": false,
}
`;

exports[`uiReducer handles showFeedbackForm action 1`] = `
Object {
  "customerPopupVisible": false,
  "feedbackFormVisible": true,
  "searchVisible": false,
}
`;

exports[`uiReducer handles showSearch action 1`] = `
Object {
  "customerPopupVisible": false,
  "feedbackFormVisible": false,
  "searchVisible": true,
}
`;
